--- a/imbACE.Core/imbACE.Core.csproj
+++ b/imbACE.Core/imbACE.Core.csproj
@@ -24,6 +24,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>1</WarningLevel>
     <DocumentationFile>bin\Debug\imbACE.Core.xml</DocumentationFile>
+    <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -36,18 +37,6 @@
   <ItemGroup>
     <Reference Include="HtmlAgilityPack, Version=1.6.5.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.6.5\lib\Net40\HtmlAgilityPack.dll</HintPath>
-    </Reference>
-    <Reference Include="imbSCI.Core, Version=0.1.6541.17791, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\imbSCI.0.1.0\lib\net40\imbSCI.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="imbSCI.Data, Version=0.1.6541.14062, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\imbSCI.0.1.0\lib\net40\imbSCI.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="imbSCI.DataComplex, Version=0.1.6541.17792, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\imbSCI.0.1.0\lib\net40\imbSCI.DataComplex.dll</HintPath>
-    </Reference>
-    <Reference Include="imbSCI.Reporting, Version=0.1.6541.17792, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\imbSCI.0.1.0\lib\net40\imbSCI.Reporting.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.6.9.10\lib\net40\MySql.Data.dll</HintPath>
@@ -69,6 +58,7 @@
     <Compile Include="application\aceApplicationSettings.cs" />
     <Compile Include="application\aceApplicationState.cs" />
     <Compile Include="application\IAceApplicationBase.cs" />
+    <Compile Include="appManager.cs" />
     <Compile Include="ataman\fileWatch\fileWatcherEventMode.cs" />
     <Compile Include="ataman\fileWatch\fileWatcherType.cs" />
     <Compile Include="ataman\spaceWatch\atamanSpaceLimiter.cs" />
@@ -107,6 +97,7 @@
     <Compile Include="commands\menu\render\renderForTerminal.cs" />
     <Compile Include="commands\menu\render\renderTask.cs" />
     <Compile Include="commands\menu\render\renderTaskList.cs" />
+    <Compile Include="commands\scriptLineShowMode.cs" />
     <Compile Include="commands\snippet\snippet.cs" />
     <Compile Include="commands\snippet\snippetParameter.cs" />
     <Compile Include="commands\tree\commandTree.cs" />
@@ -182,6 +173,7 @@
     <Compile Include="ataman\fileWatch\fileWatcherEventCollection.cs" />
     <Compile Include="ataman\fileWatch\fileWatcherEventType.cs" />
     <Compile Include="ataman\fileWatch\fileWatcherException.cs" />
+    <Compile Include="imbACECoreConfig.cs" />
     <Compile Include="interfaces\IGetToSetFromString.cs" />
     <Compile Include="data\measurement\performanceBase.cs" />
     <Compile Include="data\measurement\performanceResourcesTake.cs" />
@@ -227,8 +219,10 @@
     <Compile Include="plugins\deployer\acePluginDeployer.cs" />
     <Compile Include="plugins\deployer\IAcePluginDeployer.cs" />
     <Compile Include="plugins\deployer\IAcePluginDeployerBase.cs" />
+    <Compile Include="plugins\internalPluginManager.cs" />
     <Compile Include="plugins\NamespaceDoc.cs" />
     <Compile Include="plugins\pluginManager.cs" />
+    <Compile Include="plugins\pluginManagerBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sound\beep\beepDuration.cs" />
     <Compile Include="sound\beep\beepRoleType.cs" />
@@ -269,8 +263,24 @@
     <None Include="imbACE.Core.licenseheader" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="process\" />
+    <ProjectReference Include="..\..\imbSCI\imbSCI.Core\imbSCI.Core.csproj">
+      <Project>{d02f731c-3a1c-4094-ba85-a8b563906e7e}</Project>
+      <Name>imbSCI.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\imbSCI\imbSCI.DataComplex\imbSCI.DataComplex.csproj">
+      <Project>{84869e5f-cc21-425d-beb6-5ef4d4773b15}</Project>
+      <Name>imbSCI.DataComplex</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\imbSCI\imbSCI.Data\imbSCI.Data.csproj">
+      <Project>{22b51684-1a11-4523-8c5c-fc6d76818bc4}</Project>
+      <Name>imbSCI.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\imbSCI\imbSCI.Reporting\imbSCI.Reporting.csproj">
+      <Project>{d50919e9-84f1-4dc8-a101-3c114389b067}</Project>
+      <Name>imbSCI.Reporting</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
