--- a/imbACE.Services/imbACE.Services.csproj
+++ b/imbACE.Services/imbACE.Services.csproj
@@ -24,6 +24,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>1</WarningLevel>
     <DocumentationFile>bin\Debug\imbACE.Services.xml</DocumentationFile>
+    <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,18 +35,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="imbSCI.Core, Version=0.1.6541.17791, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\imbSCI.0.1.0\lib\net40\imbSCI.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="imbSCI.Data, Version=0.1.6541.14062, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\imbSCI.0.1.0\lib\net40\imbSCI.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="imbSCI.DataComplex, Version=0.1.6541.17792, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\imbSCI.0.1.0\lib\net40\imbSCI.DataComplex.dll</HintPath>
-    </Reference>
-    <Reference Include="imbSCI.Reporting, Version=0.1.6541.17792, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\imbSCI.0.1.0\lib\net40\imbSCI.Reporting.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -62,6 +51,9 @@
     <Compile Include="aceCommons.cs" />
     <Compile Include="application\aceApplicationBase.cs" />
     <Compile Include="application\aceConsoleApplicationBase.cs" />
+    <Compile Include="application\aceTerminalApplicationEventArgs.cs" />
+    <Compile Include="consolePlugins\aceConsolePluginManager.cs" />
+    <Compile Include="consolePlugins\IAceConsolePlugin.cs" />
     <Compile Include="platform\consolePlatform.cs" />
     <Compile Include="platform\consolePlatformExtensions.cs" />
     <Compile Include="platform\core\platformBase.cs" />
@@ -183,6 +175,22 @@
     <Folder Include="platform\output\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\imbSCI\imbSCI.Core\imbSCI.Core.csproj">
+      <Project>{d02f731c-3a1c-4094-ba85-a8b563906e7e}</Project>
+      <Name>imbSCI.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\imbSCI\imbSCI.DataComplex\imbSCI.DataComplex.csproj">
+      <Project>{84869e5f-cc21-425d-beb6-5ef4d4773b15}</Project>
+      <Name>imbSCI.DataComplex</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\imbSCI\imbSCI.Data\imbSCI.Data.csproj">
+      <Project>{22b51684-1a11-4523-8c5c-fc6d76818bc4}</Project>
+      <Name>imbSCI.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\imbSCI\imbSCI.Reporting\imbSCI.Reporting.csproj">
+      <Project>{d50919e9-84f1-4dc8-a101-3c114389b067}</Project>
+      <Name>imbSCI.Reporting</Name>
+    </ProjectReference>
     <ProjectReference Include="..\imbACE.Core\imbACE.Core.csproj">
       <Project>{55134e32-7ca1-4896-9f86-2faab73b24b5}</Project>
       <Name>imbACE.Core</Name>
