--- a/imbACE.ApplicationDemo/imbACE.ApplicationDemo.csproj
+++ b/imbACE.ApplicationDemo/imbACE.ApplicationDemo.csproj
@@ -42,6 +42,18 @@
     <StartupObject>imbACE.ApplicationDemo.terminalApp.ApplicationDemo</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="imbSCI.Core, Version=0.1.6558.28706, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\imbSCI.0.1.1.1\lib\net40\imbSCI.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="imbSCI.Data, Version=0.1.6558.26332, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\imbSCI.0.1.1.1\lib\net40\imbSCI.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="imbSCI.DataComplex, Version=0.1.6558.28707, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\imbSCI.0.1.1.1\lib\net40\imbSCI.DataComplex.dll</HintPath>
+    </Reference>
+    <Reference Include="imbSCI.Reporting, Version=0.1.6558.28707, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\imbSCI.0.1.1.1\lib\net40\imbSCI.Reporting.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -68,22 +80,6 @@
     <Content Include="imbVeles_white.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\imbSCI\imbSCI.Core\imbSCI.Core.csproj">
-      <Project>{d02f731c-3a1c-4094-ba85-a8b563906e7e}</Project>
-      <Name>imbSCI.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\imbSCI\imbSCI.DataComplex\imbSCI.DataComplex.csproj">
-      <Project>{84869e5f-cc21-425d-beb6-5ef4d4773b15}</Project>
-      <Name>imbSCI.DataComplex</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\imbSCI\imbSCI.Data\imbSCI.Data.csproj">
-      <Project>{22b51684-1a11-4523-8c5c-fc6d76818bc4}</Project>
-      <Name>imbSCI.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\imbSCI\imbSCI.Reporting\imbSCI.Reporting.csproj">
-      <Project>{d50919e9-84f1-4dc8-a101-3c114389b067}</Project>
-      <Name>imbSCI.Reporting</Name>
-    </ProjectReference>
     <ProjectReference Include="..\imbACE.Core\imbACE.Core.csproj">
       <Project>{55134e32-7ca1-4896-9f86-2faab73b24b5}</Project>
       <Name>imbACE.Core</Name>
