--- a/imbACE.NuGet/packages.config
+++ b/imbACE.NuGet/packages.config
@@ -1,15 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Accord" version="3.8.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="Accord.Math" version="3.8.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="Accord.Statistics" version="3.8.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="AForge" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Imaging" version="2.2.5" targetFramework="net45" />
-  <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
-  <package id="CsvHelper" version="2.16.3.0" targetFramework="net45" requireReinstallation="true" />
-  <package id="DotNetZip" version="1.10.1" targetFramework="net45" />
-  <package id="EPPlus" version="4.1.1" targetFramework="net45" />
-  <package id="imbSCI" version="0.1.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" requireReinstallation="true" />
-  <package id="PubComp.NuGetPack" version="2.14.0" targetFramework="net40" />
+  <package id="Accord" version="3.8.0" targetFramework="net40" />
+  <package id="Accord.Math" version="3.8.0" targetFramework="net40" />
+  <package id="Accord.Statistics" version="3.8.0" targetFramework="net40" />
+  <package id="AForge" version="2.2.5" targetFramework="net40" />
+  <package id="AForge.Imaging" version="2.2.5" targetFramework="net40" />
+  <package id="AForge.Math" version="2.2.5" targetFramework="net40" />
+  <package id="CsvHelper" version="2.16.3.0" targetFramework="net40" />
+  <package id="DotNetZip" version="1.10.1" targetFramework="net40" />
+  <package id="EPPlus" version="4.1.1" targetFramework="net40" />
+  <package id="imbSCI" version="0.1.1.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
 </packages>
