--- a/imbACE.ApplicationDemo/packages.config
+++ b/imbACE.ApplicationDemo/packages.config
@@ -17,6 +17,7 @@
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net40" />
   <package id="DotNetZip" version="1.10.1" targetFramework="net40" />
   <package id="EPPlus" version="4.1.1" targetFramework="net40" />
-  <package id="imbSCI" version="0.1.1.1" targetFramework="net40" />
+  <package id="imbSCI" version="0.1.2.16" targetFramework="net40" />
+  <package id="MathNet.Numerics" version="3.20.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
 </packages>
