--- a/imbACE.Network/packages.config
+++ b/imbACE.Network/packages.config
@@ -19,7 +19,7 @@
   <package id="DotNetZip" version="1.10.1" targetFramework="net40" />
   <package id="EPPlus" version="4.1.1" targetFramework="net40" />
   <package id="HtmlAgilityPack" version="1.6.5" targetFramework="net40" />
-  <package id="imbSCI" version="0.1.1.1" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
+  <package id="imbSCI" version="0.1.2.16" targetFramework="net40" />
+  <package id="MathNet.Numerics" version="3.20.2" targetFramework="net40" />
   <package id="PubComp.NuGetPack" version="2.14.0" targetFramework="net40" />
 </packages>
